--- a/src/app.html
+++ b/src/app.html
@@ -43,19 +43,19 @@
 
       <div class="recommended">
 
-        <div class="card">
+        <div v-for="(product, i) in inventory.slice(0,3)" :key="product.id" class="card">
           <div class="card-title">
-            Carrots
+            {{ product.name }}
           </div>
           <div class="card-body">
-            <i class="icofont-10x icofont-carrot"></i>
+            <i class="icofont-10x icofont-{{product.icon}}"></i>
             <form>
               <div class="row">
                 <div class="cell">
                   <label>Type:</label>
                 </div>
                 <div class="cell">
-                  <em>Vegetable</em>
+                  <em>{{ product.type }}</em>
                 </div>
               </div>
               <div class="row">
@@ -63,7 +63,7 @@
                   <label>Price:</label>
                 </div>
                 <div class="cell">
-                  $4.82
+                  \${{ product.price.USD }}
                 </div>
               </div>
               <div class="row">
@@ -71,93 +71,13 @@
                   <label>Quantity:</label>
                 </div>
                 <div class="cell">
-                  <input type="number" v-model.number="inventory.carrots">
+                  <input type="number" v-model.number="product.quantity">
                 </div>
               </div>
             </form>
           </div>
           <div class="card-footer">
-            <button @click="addToCart('carrots')" class="btn btn-light">
-              Add to cart
-            </button>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-title">
-            Pineapples
-          </div>
-          <div class="card-body">
-            <i class="icofont-10x icofont-pineapple"></i>
-            <form>
-              <div class="row">
-                <div class="cell">
-                  <label>Type:</label>
-                </div>
-                <div class="cell">
-                  <em>Fruit</em>
-                </div>
-              </div>
-              <div class="row">
-                <div class="cell">
-                  <label>Price:</label>
-                </div>
-                <div class="cell">
-                  $1.62
-                </div>
-              </div>
-              <div class="row">
-                <div class="cell">
-                  <label>Quantity:</label>
-                </div>
-                <div class="cell">
-                  <input type="number" v-model.number="inventory.pineapples">
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="card-footer">
-            <button @click="addToCart('pineapples')" class="btn btn-light">
-              Add to cart
-            </button>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-title">
-            Cherries
-          </div>
-          <div class="card-body">
-            <i class="icofont-10x icofont-cherry"></i>
-            <form>
-              <div class="row">
-                <div class="cell">
-                  <label>Type:</label>
-                </div>
-                <div class="cell">
-                  <em>Fruit</em>
-                </div>
-              </div>
-              <div class="row">
-                <div class="cell">
-                  <label>Price:</label>
-                </div>
-                <div class="cell">
-                  $1.04
-                </div>
-              </div>
-              <div class="row">
-                <div class="cell">
-                  <label>Quantity:</label>
-                </div>
-                <div class="cell">
-                  <input type="number" v-model.number="inventory.cherries">
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="card-footer">
-            <button @click="addToCart('cherries')" class="btn btn-light">
+            <button @click="addToCart(product.name, i)" class="btn btn-light">
               Add to cart
             </button>
           </div>
@@ -167,7 +87,7 @@
 
     </main>
 
-    <sidebar v-if="showSidebar" :toggle="toggleSidebar" />
+    <sidebar v-if="showSidebar" :toggle="toggleSidebar" :cart="cart" :inventory="inventory" />
 
     <footer>
     </footer>
@@ -180,31 +100,35 @@
       data() {
         return {
           showSidebar: false,
-          inventory: {
-            carrots: 0,
-            pineapples: 0,
-            cherries: 0
-          },
+          inventory: [],
           cart: {
-            carrots: 0,
-            pineapples: 0,
-            cherries: 0
           }
         }
       },
       methods: {
-        addToCart(type) {
-          this.cart[type] += this.inventory[type]
+        addToCart(name, index) {
+          if (!this.cart[name]) this.cart[name] = 0
+          this.cart[name] += this.inventory[index].quantity
           console.log(this.cart)
         },
         toggleSidebar() {
           this.showSidebar = !this.showSidebar
         }
+      },
+      async mounted() {
+        const res = await fetch('./food.json')
+        const data = await res.json()
+        this.inventory = data
       }
     })
 
     app.component('sidebar', {
-      props: ['toggle'],
+      props: ['toggle', 'cart', 'inventory'],
+      computed: {
+        cartTotal() {
+          return (this.cart.carrots * 4.82).toFixed(2)
+        }
+      },
       template: `
         <aside class="cart-container">
           <div class="cart">
@@ -229,12 +153,12 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
+                  <tr v-for="(quantity, key, i) in cart" :key="i">
                     <td><i class="icofont-carrot icofont-3x"></i></td>
-                    <td>Carrot</td>
-                    <td>$1.00</td>
-                    <td class="center">1</td>
-                    <td>$1.00</td>
+                    <td>{{key}}</td>
+                    <td>$4.82</td>
+                    <td class="center">{{quantity}}</td>
+                    <td>\${{ (cart.carrots * 4.82).toFixed(2) }}</td>
                     <td class="center">
                       <button class="btn btn-light cart-remove">
                         &times;
@@ -246,7 +170,7 @@
 
               <p class="center"><em>No items in cart</em></p>
               <div class="spread">
-                <span><strong>Total:</strong> $1.00</span>
+                <span><strong>Total:</strong> \${{ cartTotal }}</span>
                 <button class="btn btn-light">Checkout</button>
               </div>
             </div>
