--- a/src/app.html
+++ b/src/app.html
@@ -63,7 +63,7 @@
                   <label>Price:</label>
                 </div>
                 <div class="cell">
-                  \${{ product.price.USD }}
+                  ${{ product.price.USD }}
                 </div>
               </div>
               <div class="row">
@@ -125,8 +125,21 @@
     app.component('sidebar', {
       props: ['toggle', 'cart', 'inventory'],
       computed: {
-        cartTotal() {
-          return (this.cart.carrots * 4.82).toFixed(2)
+
+      },
+      methods: {
+        getPrice(name) {
+          const product = this.inventory.find((p) => {
+            return p.name === name
+          })
+          return product.price.USD
+        },
+        calculateTotal() {
+          const names = Object.keys(this.cart)
+          const total = Object.values(this.cart).reduce((acc, current, index) => {
+            return acc + (current * this.getPrice(names[index]))
+          })
+          return total
         }
       },
       template: `
@@ -156,9 +169,9 @@
                   <tr v-for="(quantity, key, i) in cart" :key="i">
                     <td><i class="icofont-carrot icofont-3x"></i></td>
                     <td>{{key}}</td>
-                    <td>$4.82</td>
+                    <td>\${{ getPrice(key) }}</td>
                     <td class="center">{{quantity}}</td>
-                    <td>\${{ (cart.carrots * 4.82).toFixed(2) }}</td>
+                    <td>\${{ (quantity * getPrice(key)).toFixed(2) }}</td>
                     <td class="center">
                       <button class="btn btn-light cart-remove">
                         &times;
@@ -170,7 +183,7 @@
 
               <p class="center"><em>No items in cart</em></p>
               <div class="spread">
-                <span><strong>Total:</strong> \${{ cartTotal }}</span>
+                <span><strong>Total:</strong> \${{ calculateTotal() }}</span>
                 <button class="btn btn-light">Checkout</button>
               </div>
             </div>
