--- a/src/app.html
+++ b/src/app.html
@@ -27,7 +27,7 @@
       </nav>
       <a @click="toggleSidebar" class="top-bar-cart-link">
         <i class="icofont-cart-alt icofont-1x"></i>
-        <span>Cart (0)</span>
+        <span>Cart ({{ totalQuantity}})</span>
       </a>
     </header>
 
@@ -87,7 +87,7 @@
 
     </main>
 
-    <sidebar v-if="showSidebar" :toggle="toggleSidebar" :cart="cart" :inventory="inventory" />
+    <sidebar v-if="showSidebar" :toggle="toggleSidebar" :cart="cart" :inventory="inventory" :remove="removeItem" />
 
     <footer>
     </footer>
@@ -95,105 +95,7 @@
   </div>
 
   <script src="https://unpkg.com/vue@next"></script>
-  <script>
-    let app = Vue.createApp({
-      data() {
-        return {
-          showSidebar: false,
-          inventory: [],
-          cart: {
-          }
-        }
-      },
-      methods: {
-        addToCart(name, index) {
-          if (!this.cart[name]) this.cart[name] = 0
-          this.cart[name] += this.inventory[index].quantity
-          console.log(this.cart)
-        },
-        toggleSidebar() {
-          this.showSidebar = !this.showSidebar
-        }
-      },
-      async mounted() {
-        const res = await fetch('./food.json')
-        const data = await res.json()
-        this.inventory = data
-      }
-    })
-
-    app.component('sidebar', {
-      props: ['toggle', 'cart', 'inventory'],
-      computed: {
-
-      },
-      methods: {
-        getPrice(name) {
-          const product = this.inventory.find((p) => {
-            return p.name === name
-          })
-          return product.price.USD
-        },
-        calculateTotal() {
-          const names = Object.keys(this.cart)
-          const total = Object.values(this.cart).reduce((acc, current, index) => {
-            return acc + (current * this.getPrice(names[index]))
-          })
-          return total
-        }
-      },
-      template: `
-        <aside class="cart-container">
-          <div class="cart">
-            <h1 class="cart-title spread">
-              <span>
-                Cart
-                <i class="icofont-cart-alt icofont-1x"></i>
-              </span>
-              <button @click="toggle" class="cart-close">&times;</button>
-            </h1>
-
-            <div class="cart-body">
-              <table class="cart-table">
-                <thead>
-                  <tr>
-                    <th><span class="sr-only">Product Image</span></th>
-                    <th>Product</th>
-                    <th>Price</th>
-                    <th>Qty</th>
-                    <th>Total</th>
-                    <th><span class="sr-only">Actions</span></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr v-for="(quantity, key, i) in cart" :key="i">
-                    <td><i class="icofont-carrot icofont-3x"></i></td>
-                    <td>{{key}}</td>
-                    <td>\${{ getPrice(key) }}</td>
-                    <td class="center">{{quantity}}</td>
-                    <td>\${{ (quantity * getPrice(key)).toFixed(2) }}</td>
-                    <td class="center">
-                      <button class="btn btn-light cart-remove">
-                        &times;
-                      </button>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-
-              <p class="center"><em>No items in cart</em></p>
-              <div class="spread">
-                <span><strong>Total:</strong> \${{ calculateTotal() }}</span>
-                <button class="btn btn-light">Checkout</button>
-              </div>
-            </div>
-          </div>
-        </aside>
-      `
-    })
-
-    app.mount('#app')
-  </script>
+  <script src="app.js"></script>
 </body>
 
 </html>
